--- a/Module2/2-4.ipynb
+++ b/Module2/2-4.ipynb
@@ -18,10 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "2\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 10\n",
+    "num2 = 5\n",
+    "sum = num1 + num2\n",
+    "print(sum)\n",
+    "print(12%5) #相除取餘數\n",
+    "print(11//2) #相除取整數"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,10 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 5\n",
+    "b += a\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,8 +78,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 10\n",
+    "print (num1%2==0)\n",
+    "print (num1%2!=0)\n",
+    "\n",
+    "if num1 % 2 ==0;\n",
+    "    \n",
+    "    print(\"偶數\")\n",
+    "print(離開縮排會執行)\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,7 +111,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = \"Alex\"\n",
+    "age = 20\n",
+    "if name ==\"jarvis\" or age ==20:\n",
+    "    print(\"ok\")\n",
+    "if name ==\"alex\" amd age ==20:\n",
+    "    print(\"Name is Alexand age =20\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
