--- a/Module2/practice.ipynb
+++ b/Module2/practice.ipynb
@@ -14,13 +14,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1800\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 2000\n",
+    "discount = 200\n",
+    "if total >= 2000:\n",
+    "    total -= discount\n",
+    "\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5800\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 6400\n",
+    "discount = 200\n",
+    "if total >= 2000:\n",
+    "    n = total // 2000\n",
+    "    total -= discount * n\n",
+    "\n",
+    "print(total)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
