--- a/Module4/4-2_list.ipynb
+++ b/Module4/4-2_list.ipynb
@@ -1,34 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "|基本型態|創建方式|\n",
-    "|:---:|:---:|\n",
-    "| int | x = 10  |\n",
-    "| float | y = 2.5 |\n",
-    "| boolean | parse_ok = True |\n",
-    "| string | msg = \"Hello\" |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "|容器型態|創建方式|\n",
-    "|:---:|:---:|\n",
-    "|list| | |\n",
-    "|tuple||\n",
-    "|set||\n",
-    "|dict||\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "整數 (int)、浮點數 (float)"
+    "# 初始化一個 list\n",
+    "\n"
    ]
   },
   {
@@ -36,13 +15,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "布林值 (boolean)"
+    "# 新增元素在 list 尾端\n",
+    "\n"
    ]
   },
   {
@@ -50,13 +25,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "字串 (string)"
+    "# 修改索引位置的元素\n",
+    "\n"
    ]
   },
   {
@@ -64,13 +35,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "列表 (list)"
+    "# 刪除索引位置的元素\n",
+    "\n"
    ]
   },
   {
@@ -78,13 +45,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "元組 (tuple)"
+    "# 新增元素 9 在指定索引 1，其餘元素往後移\n",
+    "\n"
    ]
   },
   {
@@ -92,13 +55,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "集合 (set)"
+    "# 移除指定的值\n",
+    "\n"
    ]
   },
   {
@@ -106,21 +65,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 計算 list 內的某個值 共有幾個\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "字典 (dict)"
+    "### list 搭配 for 迴圈"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -128,7 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 創建一個空的 dict\n"
+    "# 建立一個 1~10 的 list\n",
+    "\n"
    ]
   },
   {
@@ -137,13 +93,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 創建一個空的 set\n"
+    "# enumerate() 同時取得 index 與 value\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List comprehension 列表推導式\n",
+    "`new_list = [expression for item in iterable [if condition]]`  \n",
+    "  \n",
+    "`list的名稱 = [表達式 for 元素 in 迭代對象 [if 判斷式(...的條件)]]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
